contract detail related stock title fix

--- a/app/src/main/res/layout/activity_contract_detail.xml
+++ b/app/src/main/res/layout/activity_contract_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,18 +9,59 @@
     >
 
     <!-- Products list -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_products"
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:overScrollMode="never"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        tools:itemCount="2"
-        tools:listitem="@layout/item_product_options"
+        android:layout_marginTop="24dp"
+        app:srcCompat="@drawable/divider_thin"
         />
 
     <!-- Destination -->
+    <TextView
+        android:id="@+id/repeat_interval"
+        style="@style/DetailsText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_repeat"
+        android:drawablePadding="16dp"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="16dp"
+        tools:text="Repeats every week on Monday"
+        />
+
+    <!-- Repeat on -->
+    <TextView
+        android:id="@+id/next_repeat"
+        style="@style/DetailsText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_date"
+        android:drawablePadding="16dp"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="16dp"
+        tools:text="Next repeat is in 3 days"
+        />
+
+    <!-- Next repeat -->
+    <TextView
+        android:id="@+id/reminder"
+        style="@style/DetailsText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_alert_outline"
+        android:drawablePadding="16dp"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="16dp"
+        tools:text="Reminder 2 days in advance"
+        />
+
+    <!-- Reminder -->
     <TextView
         android:id="@+id/destination"
         style="@style/DetailsText"
@@ -38,63 +78,33 @@
         tools:text="Destination"
         />
 
-    <!-- Repeat on -->
     <TextView
-        android:id="@+id/repeat_interval"
-        style="@style/DetailsText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_repeat"
-        android:drawablePadding="16dp"
-        android:paddingStart="24dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="24dp"
-        android:paddingBottom="16dp"
-        tools:text="Repeats every week on Monday"
-        />
-
-    <!-- Next repeat -->
-    <TextView
-        android:id="@+id/next_repeat"
-        style="@style/DetailsText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_date"
-        android:drawablePadding="16dp"
-        android:paddingStart="24dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="24dp"
-        android:paddingBottom="16dp"
-        tools:text="Next repeat is in 3 days"
-        />
-
-    <!-- Reminder -->
-    <TextView
-        android:id="@+id/reminder"
-        style="@style/DetailsText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_alert_outline"
-        android:drawablePadding="16dp"
-        android:paddingStart="24dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="24dp"
-        android:paddingBottom="16dp"
-        tools:text="Reminder 2 days in advance"
-        />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        app:srcCompat="@drawable/divider_thin"
-        />
-
-    <include
         android:id="@+id/related_stock_title"
-        layout="@layout/item_section_divider"
+        style="@style/ListSectionDividerText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="24dp"
+        tools:text="Section divider"
+        />
+
+    <!--    <include-->
+    <!--        android:id="@+id/related_stock_title"-->
+    <!--        layout="@layout/item_section_divider"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        />-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_products"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:overScrollMode="never"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        tools:itemCount="2"
+        tools:listitem="@layout/item_product_options"
         />
 
     <androidx.recyclerview.widget.RecyclerView
