select product fragment shows searchable list of products

--- a/app/src/main/res/layout/fragment_searchable_list.xml
+++ b/app/src/main/res/layout/fragment_searchable_list.xml
@@ -1,5 +1,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,8 +12,8 @@
         android:id="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:hint="@string/search_title"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
@@ -27,6 +28,12 @@
         android:paddingTop="16dp"
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
+        />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/divider_thin"
         />
 
     <com.martinwalls.meatmanager.ui.common.recyclerview.CustomRecyclerView
