--- a/app/src/main/res/layout/activity_edit_stock.xml
+++ b/app/src/main/res/layout/activity_edit_stock.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="@dimen/screen_margin_horizontal"
         android:layout_marginEnd="@dimen/screen_margin_horizontal"
         android:orientation="vertical"
+        tools:visibility="gone"
         >
 
         <TextView
@@ -174,6 +175,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="gone"
+        tools:visibility="visible"
         >
 
         <com.martinwalls.meatmanager.ui.common.AddNewTextView
