--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -105,7 +105,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/add_product"
+                android:id="@+id/btn_add_product"
                 style="@style/AddAnotherProductText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
