--- a/app/src/main/res/layout/fragment_edit_contract.xml
+++ b/app/src/main/res/layout/fragment_edit_contract.xml
@@ -112,7 +112,7 @@
 
             <!-- add another product btn -->
             <TextView
-                android:id="@+id/add_product"
+                android:id="@+id/btn_add_product"
                 style="@style/AddAnotherProductText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
