--- a/app/src/main/res/drawable/nav_drawer_item_selected.xml
+++ b/app/src/main/res/drawable/nav_drawer_item_selected.xml
@@ -12,7 +12,7 @@
             </item>
             <item>
                 <shape>
-                    <solid android:color="?selectedItemBackgroundColor" />
+                    <solid android:color="?android:windowBackground" />
                 </shape>
             </item>
         </layer-list>
