--- a/app/src/main/res/layout/fragment_searchable_list.xml
+++ b/app/src/main/res/layout/fragment_searchable_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.martinwalls.meatmanager.ui.contracts.edit.SelectProductFragment"
+    tools:context="com.martinwalls.meatmanager.ui.contracts.edit.product.SelectProductFragment"
     >
 
     <EditText
